Create authentication and JWT token

--- a/movies-store/src/app/sign/sign-in/sign-in.component.html
+++ b/movies-store/src/app/sign/sign-in/sign-in.component.html
@@ -83,7 +83,7 @@
 								</div> -->
 								<div class="col-12 col-md-12 pl-2 my-2">
 									<button class="btn btn-block btn-primary my-1 w-100 mx-1 px-1" type="submit" tabindex="5"
-										 >
+										(click)="doLogin()">
 										<label class="font-weight-bold my-0">Sign In</label>
 									</button>
 								</div>
